<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    android:padding="20dp">
    <TextView
        android:id="@+id/detail_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_first_name"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/detail_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/friend_last_name"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/detail_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/friend_tel"
        android:textSize="24sp"/>


    <TextView
        android:id="@+id/detail_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/friend_email"
        android:textSize="24sp"/>


    <TextView
        android:id="@+id/detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/friend_description"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_edit"
            />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_delete"
            />

    </LinearLayout>


</LinearLayout>